# readwise

./: .gitignore  Cargo.toml  README.md  justfile  rustfmt.toml
.github/workflows/: rust.yml
example/: Cargo.toml
example/src/: main.rs
src/: auth.rs  client.rs  common.rs  error.rs  lib.rs  main.rs  model.rs  request.rs  url.rs
