[package]
name          = "readwise"
version       = "0.3.1"
authors       = ["Liam liam@scalzulli.com"]
edition       = "2018"
description   = "A rust wrapper for the Readwise API."
repository    = "https://github.com/terror/readwise"
documentation = "https://docs.rs/readwise"
homepage      = "https://github.com/terror/readwise"
license       = "MIT"

[dependencies]
anyhow     = "1.0.45"
http       = "0.2.5"
serde_json = "1.0.69"
snafu      = "0.6.10"

[dependencies.reqwest]
version  = "0.11.6"
features = ["json", "blocking"]

[dependencies.serde]
version  = "1.0.130"
features = ["derive"]

[dev-dependencies]
dotenv  = "0.15.0"
mockito = "0.30.0"
