[package]
name = "readwise"
version = "0.4.0"
authors = ["Liam liam@scalzulli.com"]
edition = "2021"
description = "A rust wrapper for the Readwise API."
repository = "https://github.com/terror/readwise"
documentation = "https://docs.rs/readwise"
homepage = "https://github.com/terror/readwise"
license = "CC0"

[dependencies]
anyhow = "1.0.65"
http = "0.2.8"
serde_json = "1.0.86"
snafu = "0.7.2"

[dependencies.reqwest]
version = "0.11.12"
features = ["json", "blocking"]

[dependencies.serde]
version = "1.0.145"
features = ["derive"]

[dev-dependencies]
dotenv = "0.15.0"
mockito = "0.31.0"
